--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,12 +43,12 @@
               <li><%= link_to "Settings", "#" %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Log out", "#" %>
+                <%= link_to "Log out", logout_path %>
               </li>
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Log in", "#" %></li>
+          <li><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign up", signup_path %></li>
         <% end %>
       </ul>
