--- a/app/assets/stylesheets/00-general.css.scss
+++ b/app/assets/stylesheets/00-general.css.scss
@@ -1,2 +1,17 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.instructions {
+  font-size: 140%
+}
+
+.main-view-container {
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
+/* Forms */
+.required-input {
+  color: $brand-danger;
+  font-weight: bold;
+}
