--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -5,7 +5,7 @@
     <%= form_for(:session, url: login_path) do |f| %>
 
       <%= f.label :username %>
-      <%= f.email_field :username, class: 'form-control' %>
+      <%= f.text_field :username, class: 'form-control' %>
 
       <%= f.label :password %>
       <%= link_to "(forgot password)", new_password_reset_path %>
