--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -43,7 +43,7 @@
               <li><%= link_to "Settings", "#" %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Log out", logout_path %>
+                <%= link_to "Log out", logout_path, method: "delete" %>
               </li>
             </ul>
           </li>
@@ -51,7 +51,9 @@
           <li><%= link_to "Log in", login_path %></li>
           <li><%= link_to "Sign up", signup_path %></li>
         <% end %>
+
       </ul>
+
 
     </div>
   </div>
