--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,75 +4,94 @@
 <div class="row settings">
   <div class="col-md-6 col-md-offset-3">
 
-    <div class="info-block">
-      <div class="current-info">
-        <span class="info-label">Username:</span> <%= @user.username %>  
-        <a href="#" class="edit"><span class="glyphicon glyphicon-pencil"></span></a>
-      </div>
-      <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <%= f.label :username %>
-        <%= f.text_field :username, class: 'form-control' %>
+    <div class="form-group">
+      <p class="instructions">
+        Edit your current information.
+      </p> 
+        <%= form_for(@user) do |f| %>
+          <%= render 'shared/error_messages', object: f.object %>
+          
+          <div class="form-group">
+            <%= f.label :username %> (1&ndash;50 characters)
+            <%= f.text_field :username, value: @user.username, 
+              class: 'form-control', placeholder: 'e.g., psmith' %>
+          </div>
 
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control', 
-            placeholder: "Enter your current password"  %>
-        <%= f.submit "Change username", class: "btn btn-primary" %>
-      <% end %>
+          <div class="form-group">
+            <%= f.label :first_name %> (1&ndash;50 characters)
+            <%= f.text_field :first_name, value: @user.first_name, 
+              class: 'form-control', placeholder: 'e.g., Pat' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %> (1&ndash;50 characters)
+            <%= f.text_field :last_name, value: @user.last_name, 
+              class: 'form-control', placeholder: 'e.g., Smith'%>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :role %>
+            <div class="radio">
+              <label>
+                <%= f.radio_button :role, :faculty, 
+                  selected: @user.role == "faculty" %> Faculty/staff
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <%= f.radio_button :role, :student, 
+                  selected: @user.role == "student" %> Student
+              </label>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :primary_field_of_study %>
+            <%= f.text_field :field_of_study, value: @user.field_of_study, 
+              class: 'form-control', placeholder: 'e.g., Criminal Justice' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :email %>
+            <%= f.email_field :email, value: @user.email, class: 'form-control', 
+              placeholder: 'e.g., jsmith@mail.com' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :current_password %>
+            <%= f.password_field :current_password, class: 'form-control', 
+                placeholder: "Enter your current password" %>
+          </div>
+
+          <%= f.submit "Update information", class: "btn btn-primary" %>
+        <% end %>
     </div>
 
-    <div class="info-block">
-      <div class="current-info">
-        <span class="info-label">First name:</span> <%= @user.first_name %>  
-        <a href="#" class="edit"><span class="glyphicon glyphicon-pencil"></span></a>
-      </div>
+
+    <div class="form-group">
+      <p class="instructions">
+      Change your password.
+      </p>
       <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name, class: 'form-control' %>
 
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control', 
-            placeholder: "Enter your current password"  %>
-        <%= f.submit "Change username", class: "btn btn-primary" %>
-      <% end %>
-    </div>
+        <div class="form-group">
+          <%= f.label :current_password %>
+          <%= f.password_field :current_password, class: 'form-control', 
+              placeholder: "Enter your current password" %>
+        </div>
 
-    <div class="info-block">
-      <div class="current-info">
-        <span class="info-label">Email:</span> <%= @user.email %>  
-        <a href="#" class="edit"><span class="glyphicon glyphicon-pencil"></span></a>
-      </div>
-      <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control' %>
-
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control', 
-            placeholder: "Enter your current password"  %>
-        <%= f.submit "Change email", class: "btn btn-primary" %>
-      <% end %>
-    </div>
-
-    <div class="info-block">
-      <div class="current-info">
-        <span class="info-label">Password:</span> ***********  
-        <a href="#" class="edit"><span class="glyphicon glyphicon-pencil"></span></a>
-      </div>
-      <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control', 
-            placeholder: "Enter your current password" %>
-
+        <div class="form-group">
         <%= f.label :new_password %>
         <%= f.password_field :password, class: 'form-control', 
             placeholder: "Enter your new password" %>
+        </div>
 
+        <div class="form-group">
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control', 
             placeholder: "Repeat your new password" %>
+        </div>
 
         <%= f.submit "Change password", class: "btn btn-primary" %>
       <% end %>
