--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,10 +31,9 @@
       </div>
       <div class="radio">
         <label>
-          <%= f.radio_button :role, :faculty %> Student
+          <%= f.radio_button :role, :student %> Student
         </label>
       </div>
-        <!-- <%= f.text_field :role, class: 'form-control', placeholder: 'e.g., Faculty' %> -->
     </div>
 
     <div class="form-group">
