Updated some styles affecting the settings page.

--- a/app/assets/stylesheets/00-general.css.scss
+++ b/app/assets/stylesheets/00-general.css.scss
@@ -6,12 +6,17 @@
 }
 
 .main-view-container {
-  padding-right: 50px;
-  padding-left: 50px;
+  padding-right: 5em;
+  padding-left: 5em;
 }
 
 /* Forms */
 .required-input {
   color: $brand-danger;
   font-weight: bold;
+}
+
+.form-container {
+  margin-top: 2em;
+  margin-bottom: 3em;
 }
