--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="row settings">
   <div class="col-md-6 col-md-offset-3">
 
-    <div class="form-group">
+    <div class="form-container">
       <p class="instructions">
         Edit your current information.
       </p> 
@@ -68,7 +68,7 @@
     </div>
 
 
-    <div class="form-group">
+    <div class="form-container">
       <p class="instructions">
       Change your password.
       </p>
