Added beginnings of homepage.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,12 @@
-<h1>Welcome</h1>
-<p>
-<%= link_to "Sign up now!", signup_path %>
-</p>
+<div class="vertical-launcher">
+
+<%= link_to "Projects", "#", class: "vertical-launch" %>
+<%= link_to "Software", "#", class: "vertical-launch" %>
+<%= link_to "Datasets", "#", class: "vertical-launch" %>
+<%= link_to "Anayses", "#", class: "vertical-launch" %>
+
+
+
+
+
+</div>
