--- a/app/assets/stylesheets/00-general.css.scss
+++ b/app/assets/stylesheets/00-general.css.scss
@@ -20,3 +20,18 @@
   margin-top: 2em;
   margin-bottom: 3em;
 }
+
+.vertical-launcher {
+    width: 100%;
+    text-align: center;    
+}
+
+.vertical-launch {
+    display: inline-block;
+    width: 10em;
+    padding-top: 5em;
+    padding-bottom: 5em;
+    background-color: blue;
+    text-align: center;
+    margin: 1em;
+}
