--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -4,7 +4,19 @@
  * Created by hfeild on 06-Apr-2017.
  */
 
+#header {
+  text-align: center;
+}
 
 .version {
   font-size: 55%;
+}
+
+#verticals-nav {
+  display: inline-block;
+
+  ul {
+    vertical-align: top;
+    display: inline-block;
+  }
 }
