--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -4,10 +4,21 @@
  * Created by hfeild on 08-Apr-2017.
  */
 
+/* To make the footer sticky to the bottom of the page/viewport. Taken from
+ * http://stackoverflow.com/a/28713303/5991528
+ */
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+}
 .footer {
-/*
-  background-color: #f8f8f8;
-  padding: 30px 20px 30px 20px;
-*/
-  margin-bottom: 0px
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  margin-bottom: 0;
 }
