--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default footer">
-  <div class="container-fluid">
+  <div class="container-fluid ">
 
     <div class="navbar-header">
       <div id="logo" class="navbar-brand">
@@ -8,7 +8,7 @@
       </div>
     </div>
 
-    <div id="navbar" class="navbar-collapse collapse">
+    <div>
       <ul class="nav navbar-nav navbar-left">
         <li><%= link_to 'About', '#' %></li>
         <li><%= link_to 'Contact', '#' %></li>
