Added integration tests for software show.

--- a/app/views/software/_software.html.erb
+++ b/app/views/software/_software.html.erb
@@ -1,4 +1,4 @@
-<div class="software index-entry">
+<div data-software-id="<%= software.id %>" class="software index-entry">
 
   <h3><%= link_to software.name, software_path(software.id) %></h3>
   <%= software.summary %>
