--- a/app/views/software/_software.html.erb
+++ b/app/views/software/_software.html.erb
@@ -1,6 +1,6 @@
 <div data-software-id="<%= software.id %>" class="software index-entry">
 
-  <h3><%= link_to software.name, software_path(software.id) %></h3>
-  <%= software.summary %>
+  <span class="name"><%= link_to software.name, software_path(software.id) %></span>
+  <span class="summary"><%= software.summary %></span>
   
 </div>
