--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -7,6 +7,14 @@
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
       </button>
     </a>
+
+    <a href="<%= software_path(@software.id) %>", 
+        data-confirm="Are you sure you want to delete this page?",
+        method="delete">
+      <button type="button" class="btn btn-default btn-md">
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+      Delete </button>
+    </a>
   <% end %>
   </h1>
 
