--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -2,19 +2,18 @@
 <div class="container software-page" data-software-id="<%= @software.id %>">
   <h1><span class="name"><%= @software.name %></span>
   <% if can_edit? %>
-    <a href="<%= edit_software_path(@software.id) %>">
+    <%= link_to edit_software_path(@software.id)  do %>
       <button type="button" class="btn btn-default btn-md">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
       </button>
-    </a>
+    <% end %>
 
-    <a href="<%= software_path(@software.id) %>", 
-        data-confirm="Are you sure you want to delete this page?",
-        method="delete">
+    <%= link_to @software, method: :delete, data: {
+        confirm: "Are you sure you want to delete this page?"} do %> 
       <button type="button" class="btn btn-default btn-md">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
       Delete </button>
-    </a>
+    <% end %>
   <% end %>
   </h1>
 
