--- a/app/views/software/edit.html.erb
+++ b/app/views/software/edit.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Editing software: #{@software.name}") %>
 <%= render template: 'software/_modify_form', 
-  locals: {action: software_path(@software.id)} %>
+  locals: {action: software_path(@software.id), method: :PATCH} %>
