--- a/app/views/software/new.html.erb
+++ b/app/views/software/new.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "New Software Entry") %>
 <%= render template: 'software/_modify_form', 
-  locals: {action: software_index_path} %>
+  locals: {action: software_index_path, method: :post} %>
