--- a/app/views/software/_modify_form.html.erb
+++ b/app/views/software/_modify_form.html.erb
@@ -22,13 +22,15 @@
         <%= f.label :summary %><span class="required-input">*</span><br/>
         This should be a short overview of the software.
         <textarea name="summary" class="form-control add-to-vertical unchanged"
-          placeholder="e.g., An Excel plugin that allows you to create and manipulate network diagrams."><%= @software.summary %></textarea>
+          placeholder="e.g., An Excel plugin that allows you to create and manipulate network diagrams."
+          ><%= @software.summary %></textarea>
       </div>
 
       <div class="form-group">
         <%= f.label :description %><span class="required-input">*</span><br/>
         This should be a detailed description of the software and how to use it.
-        <textarea name="description" class="form-control add-to-vertical unchanged"
+        <textarea name="description" 
+          class="form-control add-to-vertical unchanged"
           rows="10"><%= @software.description %></textarea>
       </div>
 
@@ -62,7 +64,8 @@
         <% end %>
       </div>
 
-      <%= f.submit @software.id.nil? ? "Create entry" : "Update entry", class: "btn btn-primary" %>
+      <%= f.submit @software.id.nil? ? "Create entry" : "Update entry", 
+        class: "btn btn-primary" %>
 
 
       <% end %>
