Added bootsy for allowing WYSIWYG with photos.
Still working on making it work with the ajax submission on the software
page.

--- a/app/views/software/_modify_form.html.erb
+++ b/app/views/software/_modify_form.html.erb
@@ -29,9 +29,10 @@
       <div class="form-group">
         <%= f.label :description %><span class="required-input">*</span><br/>
         This should be a detailed description of the software and how to use it.
-        <textarea name="description" 
+        <%= f.bootsy_area :description, class: "form-control add-to-vertical unchanged", rows: 10 %>
+        <!-- <textarea name="description" 
           class="form-control add-to-vertical unchanged"
-          rows="10"><%= @software.description %></textarea>
+          rows="10"><%= @software.description %></textarea> -->
       </div>
 
       <div class="form-group examples resource">
