--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -24,7 +24,7 @@
 
   <div class="description-wrapper">
     <h2>Description</h2>
-    <span class="description"><%= @software.description %></span>
+    <span class="description"><%= @software.description.html_safe %></span>
   </div>
 
   <div class="tags">
