In the middle of some changes.

--- a/app/views/examples/_form.html.erb
+++ b/app/views/examples/_form.html.erb
@@ -18,7 +18,8 @@
   <!-- Description -->
   <div class="form-group">
     <label>Description</label><span class="required-input">*</span> 
-    <textarea class="form-control ignore unchanged" name="description" rows="10"
-    ><%= example.description %></textarea>
+    <textarea class="form-control ignore unchanged set_bootsy_text_area" 
+      name="description" rows="10"><%= example.description %></textarea>
+    
   </div>
 </div>
