--- a/app/views/examples/_form.html.erb
+++ b/app/views/examples/_form.html.erb
@@ -18,8 +18,14 @@
   <!-- Description -->
   <div class="form-group">
     <label>Description</label><span class="required-input">*</span> 
-    <textarea class="form-control ignore unchanged set_bootsy_text_area" 
-      name="description" rows="10"><%= example.description %></textarea>
+
+    <% set_botsy_text_area = example.id.nil? ? "set_botsy_text_area" : "" %>
+    <%= bootsy_area @gallery, nil, container: @gallery, 
+        value: example.description, name: "description",  rows: 10,
+          class: "form-control ignore unchanged #{set_botsy_text_area}" %>
+
+<!--     <textarea class="form-control ignore unchanged set_bootsy_text_area" 
+      name="description" rows="10"><%= example.description %></textarea>-->
     
   </div>
 </div>
