--- a/app/views/examples/_modify_form.html.erb
+++ b/app/views/examples/_modify_form.html.erb
@@ -8,7 +8,8 @@
         <%= render 'shared/error_messages', object: f.object %>
         
         <% unless @software.nil? %>
-          <%= f.hidden_field :software_id, value: @software.id %>
+          <%= f.hidden_field :software_id, name: :software_id, 
+            value: @software.id %>
         <% end %>
 
         <!-- Title -->
