Added some styling for software and example index pages.

--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -12,7 +12,9 @@
         No examples exist yet!
       <% else %>
         <h2>Examples</h2>
-        <%= render @examples %>
+        <div class="connection-index">
+          <%= render @examples %>
+        </div>
       <% end %> 
     </div>
   </div>
