--- a/app/assets/stylesheets/vertical.css.scss
+++ b/app/assets/stylesheets/vertical.css.scss
@@ -6,11 +6,30 @@
  */
 
 .index-entry {
+  display: block;  
+  min-height: 3em;
+  width: 100%;
+  margin-bottom: 1em;
+  padding: 1em .5em 1em .5em;
+  border: 1px solid gray;
+
+  &:hover {
+    background-color: #d9e8d9;
+    text-decoration: none;
+  }
+
+  &:active {
+    text-decoration: none;
+  }
 
   .name {
     font-size: 150%;
     font-weight: bold;
     display: block;
+  }
+
+  .snippet {
+
   }
 
 }
