Added partial to display example.
Also added in javascript to show the HTML description in an iframe.

--- a/app/assets/stylesheets/resource.css.scss
+++ b/app/assets/stylesheets/resource.css.scss
@@ -4,6 +4,7 @@
  * Created by hfeild on 30-May-2017.
  */
 
+/* See vertical.css.scss for general .index-entry info. */
 .connection-index .index-entry {
   padding: 0px;
   vertical-align: middle;
