--- a/app/assets/stylesheets/00-general.css.scss
+++ b/app/assets/stylesheets/00-general.css.scss
@@ -20,3 +20,10 @@
   margin-top: 2em;
   margin-bottom: 3em;
 }
+
+iframe.embed-html {
+  border: 1px solid gray;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
