--- a/app/views/examples/_example.html.erb
+++ b/app/views/examples/_example.html.erb
@@ -1,25 +1,26 @@
 
 <% if print_header %>
-<h3><%= example.title %></h3>
+  <h3><span class="name"><%= example.title %></span>
+
+    <% if can_edit? and defined? vertical %>
+      <%= form_for(example, method: :delete,
+          url: vertical_example_path(vertical, example), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Disassociate</button>
+      <% end %>
+      <%= form_for(example, method: :get,
+         url: edit_vertical_example_path(vertical, example),
+         html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+      <% end %>
+    <% end %>
+  </h3>
 <% end %>
 
-<% if can_edit? %>
-  <% if defined? vertical %>
-    <%= form_for(example, method: :delete,
-        url: vertical_example_path(vertical, example)) do |f| %>
-      <button class="btn btn-sm btn-danger">Remove example</button>
-    <% end %>
-    <%= form_for(example, method: :get,
-       url: edit_vertical_example_path(vertical, example)) do |f| %>
-      <button class="btn btn-sm btn-default">Edit example</button>
-    <% end %>
-  <% else %>
-    <%= form_for(example, method: :get,
-       url: edit_example_path(example)) do |f| %>
-      <button class="btn btn-sm btn-default">Edit example</button>
-    <% end %>
-  <% end %>
-<% end %>
 
 <iframe class="html-value description embed-html"
   data-html="<%= url_encode example.description.html_safe %>">
