--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -1,13 +1,21 @@
 <% provide(:title, "Example -- #{@example.title}") %>
 <div class="container resource-modification">
-  <h1><%= @example.title %></h1>
+  <h1><span class="name"><%= @example.title %></span>
+    <% if can_edit? %>
+      <%= link_to edit_example_path(@example)  do %>
+        <button type="button" class="btn btn-default btn-md">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        </button>
+      <% end %>
+    <% end %>
+  </h1>
 
 
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
 
-      <%= render template: 'examples/_example', locals: {
-        print_header: false, example: @example} %>
+      <%= render(partial: 'example', locals: {
+        print_header: false, example: @example}) %>
      
     </div>
   </div>
