--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -3,14 +3,14 @@
   <h1><span class="name"><%= @software.name %></span>
   <% if can_edit? %>
     <%= link_to edit_software_path(@software.id)  do %>
-      <button type="button" class="btn btn-default btn-md">
+      <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
       </button>
     <% end %>
 
     <%= link_to @software, method: :delete, data: {
         confirm: "Are you sure you want to delete this page?"} do %> 
-      <button type="button" class="btn btn-default btn-md">
+      <button type="button" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
       Delete </button>
     <% end %>
@@ -24,7 +24,8 @@
 
   <div class="description-wrapper">
     <h2>Description</h2>
-    <span class="description"><%= @software.description.html_safe %></span>
+    <iframe class="description embed-html" 
+      data-html="<%= url_encode @software.description.html_safe %>"></iframe>
   </div>
 
   <div class="tags">
@@ -53,30 +54,6 @@
 
   <div class="examples">
     <h2>Examples</h2>
-    <% if @software.examples.size == 0 %>
-      There are currently no examples associated with this software.
-    <% else %>
-      <ul>
-      <% @software.examples.each do |example| %>
-        <h3><%= example.title.nil? ? "(No title given)" : example.title %></h3>
-        <p>
-          <%= example.description.nil? ?
-              "(No description provided)" : example.description.html_safe %>
-        </p>
-        <% if can_edit? %>
-          <%= form_for(example, method: :delete,
-              url: vertical_example_path(@software, example)) do |f| %>
-            <button class="btn btn-sm btn-danger">Remove example</button>
-          <% end %>
-          <%= form_for(example, method: :get,
-             url: edit_vertical_example_path(@software, example)) do |f| %>
-            <button class="btn btn-sm btn-default">Edit example</button>
-          <% end %>
-        <% end %>
-      <% end %>
-      </ul>     
-    <% end %>
-    <p>
     <% if can_edit? %>
       <a href="<%= new_vertical_example_path @software %>"
         ><button class="btn btn-sm btn-default">Add new example</button
@@ -85,7 +62,10 @@
         ><button class="btn btn-sm btn-default">Add existing example</button
       ></a>
     <% end %>
-    </p> 
+
+    <%= render(partial: "examples/example", collection: @software.examples, 
+      locals: {print_header: true, vertical: @software}) || 
+      "There are currently no examples associated with this software." %>
   </div>
 
 </div>
